--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -10,8 +10,5 @@
     "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["./*.ts"],
-  "ts-node": {
-    "esm": true
-  }
+  "include": ["./*.ts"]
 }
